[gd_scene load_steps=7 format=3 uid="uid://m2ousm01skw3"]

[ext_resource type="Script" uid="uid://p86p0ilq5hkw" path="res://scripts/main.gd" id="1_jyhfs"]
[ext_resource type="FontFile" uid="uid://j8ukru3t68eg" path="res://font/Kenney Mini Square.ttf" id="1_o5qli"]
[ext_resource type="Texture2D" uid="uid://cxkuyl3v6cgl3" path="res://art/paddle.png" id="3_jyhfs"]
[ext_resource type="PackedScene" uid="uid://b6rd8vih5m42f" path="res://ball.tscn" id="3_tbgi4"]

[sub_resource type="LabelSettings" id="LabelSettings_0wfyh"]
font = ExtResource("1_o5qli")
font_size = 64

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tefeu"]
size = Vector2(10, 40)

[node name="Main" type="Node"]
script = ExtResource("1_jyhfs")
ball_scene = ExtResource("3_tbgi4")

[node name="Board" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0768358, 0.0768358, 0.0768358, 1)

[node name="CenterLine" type="VBoxContainer" parent="Board"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -220.0
offset_right = 5.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Mark" type="ColorRect" parent="Board/CenterLine"]
custom_minimum_size = Vector2(10, 40)
layout_mode = 2

[node name="Mark2" type="ColorRect" parent="Board/CenterLine"]
custom_minimum_size = Vector2(10, 40)
layout_mode = 2

[node name="Mark3" type="ColorRect" parent="Board/CenterLine"]
custom_minimum_size = Vector2(10, 40)
layout_mode = 2

[node name="Mark4" type="ColorRect" parent="Board/CenterLine"]
custom_minimum_size = Vector2(10, 40)
layout_mode = 2

[node name="Mark5" type="ColorRect" parent="Board/CenterLine"]
custom_minimum_size = Vector2(10, 40)
layout_mode = 2

[node name="Mark6" type="ColorRect" parent="Board/CenterLine"]
custom_minimum_size = Vector2(10, 40)
layout_mode = 2

[node name="LeftScore" type="Label" parent="Board"]
layout_mode = 0
offset_left = 165.0
offset_top = 13.0
offset_right = 235.0
offset_bottom = 93.0
text = "0"
label_settings = SubResource("LabelSettings_0wfyh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightScore" type="Label" parent="Board"]
layout_mode = 0
offset_left = 565.0
offset_top = 13.0
offset_right = 635.0
offset_bottom = 93.0
text = "0"
label_settings = SubResource("LabelSettings_0wfyh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeftPaddle" type="CharacterBody2D" parent="."]
position = Vector2(22, 316)

[node name="Sprite2D" type="Sprite2D" parent="LeftPaddle"]
texture = ExtResource("3_jyhfs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftPaddle"]
shape = SubResource("RectangleShape2D_tefeu")

[node name="RightPaddle" type="CharacterBody2D" parent="."]
position = Vector2(772, 238)

[node name="Sprite2D" type="Sprite2D" parent="RightPaddle"]
texture = ExtResource("3_jyhfs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightPaddle"]
shape = SubResource("RectangleShape2D_tefeu")

[node name="Walls" type="Node" parent="."]

[node name="Top" type="CharacterBody2D" parent="Walls"]
position = Vector2(401, -20)
scale = Vector2(82.48, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Top"]
shape = SubResource("RectangleShape2D_tefeu")

[node name="Left" type="CharacterBody2D" parent="Walls"]
position = Vector2(-6, 200)
scale = Vector2(1, 12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Left"]
shape = SubResource("RectangleShape2D_tefeu")

[node name="Right" type="CharacterBody2D" parent="Walls"]
position = Vector2(806, 200)
scale = Vector2(1, 12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Right"]
shape = SubResource("RectangleShape2D_tefeu")

[node name="Bottom" type="CharacterBody2D" parent="Walls"]
position = Vector2(401, 420)
scale = Vector2(82.48, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Bottom"]
shape = SubResource("RectangleShape2D_tefeu")
